--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h2 class="commentaire_entreprise">"La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon."
+				<h2 class="commentaire_entreprise">
+					<p>"La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon."</p>
 				</h2>
 				<p>Maxime Guibard, PDG sz À vos fourchettes</p>
 
