--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="création de site internet, agence web lyon, création de site internet gratuit, création de site internet lyon, agence de developpement web">
@@ -53,7 +53,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" alt="image d'une main d'un homme utilisant un stylos avec le logo de La chouette agence ainsi qu'un bouton contact" />
+				<img src="img/logo.png" class="center-block image-resize-mode" alt="image baniere et logo la chouette agence " />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
