--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a  class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" href="contact.html">Contact</a>
 				</div>
 			</div>
 		</div>
