--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="image baniere et logo la chouette agence " />
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h1 class="text-center hero-bloc-text tc-orange ">
 					La chouette agence.
 				</h1>
 				<div class="text-center">
@@ -126,11 +126,11 @@
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<div class="bloc tc-orange bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h3 class="mg-md text-center tc-white">
+				<h3 class="mg-md text-center tc-orange">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h3>
 				<p class="text-center white">
@@ -201,7 +201,7 @@
 <div class="bloc  bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-orange">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
