modification du formaulaire de contact dans le code html/css

--- a/index.html
+++ b/index.html
@@ -222,23 +222,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/"><img  class="icon-footer" src = "img/twitter.png" alt="lien twitter"></a>
-
+							<a class="social" href="https://twitter.com/" aria-label="lien vers twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://facebook.com/"><img  class="icon-footer" src = "img/facebook.png" alt="lien facebook"></a>
+							<a class="social" href="https://www.facebook.com/" aria-label="lien vers facebook "><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com/"><img  class="icon-footer1" src = "img/dribble-grand-logo.png" alt="lien dribble"></a>
+							<a class="social" href="https://dribbble.com/" aria-label="lien vers dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/"><img  class="icon-footer1" src = "img/instagram.png" alt="lien instagram"></a>
+							<a class="social" href="https://www.instagram.com/" aria-label="lien vers instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
