--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label for="nom">Nom</label>
-						<input type="text" id="name" class="form-control" placeholder="nom" value="Veuillez renseigner votre Nom" required>
+						<label for="name">Votre nom</label>
+						<input type="text" id="name" class="form-control" placeholder="nom" value="Veuillez renseigner votre Nom">
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email</label>
