--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,15 @@
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email</label>
-						<input type="email" id="email" class="form-control" placeholder="email" value="Votre adresse email" required>
+						<input type="email" id="email" class="form-control" placeholder="email" value="Votre adresse email">
 					</div>
 					<div class="form-group">
-						<label for="message">Comment nous avez-vous connu ?</label>
+						<label for="text">Comment nous avez-vous connu ?</label>
 						<input type="text" class="form-control" type="email" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label for="messages">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
-						<textarea id="message" class="form-control" rows="4" cols="50"></textarea>
+						<label for="message">Votre projet <br></label>
+						<textarea id="message" class="form-control" rows="4" cols="50" value="(Ajoutez autant de détails que nécessaire)"></textarea>></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
