--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,11 @@
 					</div>
 					<div class="form-group">
 						<label for="text">Comment nous avez-vous connu ?</label>
-						<input type="text" class="form-control" type="email" required id="input_504" />
+						<input type="text" id="input_504" class="form-control" type="email">
 					</div>
 					<div class="form-group">
 						<label for="message">Votre projet <br></label>
-						<textarea id="message" class="form-control" rows="4" cols="50" value="(Ajoutez autant de détails que nécessaire)"></textarea>></textarea>
+						<textarea id="message" class="form-control" rows="4" cols="50" value="(Ajoutez autant de détails que nécessaire)"></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
