--- a/contact.html
+++ b/contact.html
@@ -62,19 +62,19 @@
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="name">Votre nom</label>
-						<input type="text" id="name" class="form-control" placeholder="nom" value="Veuillez renseigner votre Nom">
+						<input type="text" id="name" class="form-control" placeholder="nom" value="Veuillez renseigner votre Nom" required>
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email</label>
-						<input type="email" id="email" class="form-control" placeholder="email" value="Votre adresse email">
+						<input type="email" id="email" class="form-control" placeholder="email" value="Votre adresse email" required>
 					</div>
 					<div class="form-group">
-						<label for="text">Comment nous avez-vous connu ?</label>
-						<input type="text" id="input_504" class="form-control" type="email">
+						<label for="msg">Comment nous avez-vous connu ?</label>
+						<input type="msg" id="input_504" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label for="message">Votre projet <br></label>
-						<textarea id="message" class="form-control" rows="4" cols="50" value="(Ajoutez autant de détails que nécessaire)"></textarea>
+						<textarea id="message" class="form-control" rows="4" cols="50" value="(Ajoutez autant de détails que nécessaire)" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
