--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
 						<input type="email" id="email" class="form-control" placeholder="email" value="Votre adresse email" required>
 					</div>
 					<div class="form-group">
-						<label for="text">Comment nous avez-vous connu ?</label>
-						<input type="text"  class="form-control" id="input_504" placeholder="message" value="" required>
+						<label for="question">Comment nous avez-vous connu ?</label>
+						<input id="input_504"  type="text" class="form-control"  placeholder="message" value="" required>
 					</div>
 					<div class="form-group">
 						<label for="message">Votre projet <br></label>
