suppression du lien contact en dessous du titre

--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
 				<h1 class="text-center hero-bloc-text tc-black ">
 					La chouette agence.
 				</h1>
-				<div class="text-center">
-					<a  class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" href="contact.html">Contact</a>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -114,7 +111,9 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<h2 class="commentaire_entreprise">
-					<p>"La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon."</p>
+					"La chouette agence est une excellente agence web ! 
+						Les web designer ont réussi à capturer l'essence de notre entreprise et à
+						 l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon."
 				</h2>
 				<p>Maxime Guibard, PDG sz À vos fourchettes</p>
 
