--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 	
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence"/></a>
+					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="logo la chouette agence "/></a>
 					
 				</div>
 			</nav>
