--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
@@ -44,7 +44,7 @@
 			</div>
 		</nav>
 	</div>
-</div>
+</header >
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -67,7 +67,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-			<h1 class="texte-entreprise">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h1>
+			<h1 class="texte-entreprise">
+				La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h1>
 			</div>
 		</div>
 		<br>
@@ -206,7 +207,7 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -238,7 +239,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
