--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="fr">
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L680RTPD7Y"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-L680RTPD7Y');
+		</script>
+		
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="La chouette agence est une agence de web design qui aide les enteprises à devenir attractives et visible sur internet. ">
@@ -13,6 +23,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	
+		
     
     <title>Accueil</title>
 
